--- a/Week6/CMP105App/CMP105App.vcxproj
+++ b/Week6/CMP105App/CMP105App.vcxproj
@@ -157,6 +157,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\Games Programmin%27 -CMP105\Week 6\CMP105_W6\Week6\CMP105App\GravityObject.cpp" />
     <ClCompile Include="Framework\Animation.cpp" />
     <ClCompile Include="Framework\Input.cpp" />
     <ClCompile Include="Framework\GameObject.cpp" />
@@ -169,6 +170,7 @@
     <Text Include="README.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\Games Programmin%27 -CMP105\Week 6\CMP105_W6\Week6\CMP105App\GravityObject.h" />
     <ClInclude Include="Framework\Animation.h" />
     <ClInclude Include="Framework\Input.h" />
     <ClInclude Include="Framework\GameObject.h" />
